--- a/client/src/app/todos/todo-list.component.html
+++ b/client/src/app/todos/todo-list.component.html
@@ -20,6 +20,14 @@
             placeholder="Filter by status"
             (input)="updateStatus($event.target.value)">
         </mat-form-field>
+        <mat-form-field>
+          <input
+          matInput
+          id="todoBody"
+          placeholder="Contained in Body"
+          (input)="updateBody($event.target.value)">
+
+        </mat-form-field>
         <!--<mat-form-field>-->
         <!--<input matInput id="userCompany" #input type="text" placeholder="Search for company" (input)="contentChange($event.target.value)">-->
         <!--</mat-form-field>-->
@@ -31,7 +39,7 @@
               <mat-panel-title matTooltip="category: {{todo.category}}">{{todo.owner}}</mat-panel-title>
 
             </mat-expansion-panel-header>
-            <mat-panel-description>Body contains {{todo.body}}</mat-panel-description>
+            <mat-panel-description>Body contains: {{todo.body}}</mat-panel-description>
             <mat-panel-description>Status: {{todo.status}}</mat-panel-description>
 
           </mat-expansion-panel>
