Add morris image

--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,7 +1,5 @@
 <div layout-gt-sm="row">
   <div flex-gt-sm="80" flex-offset-gt-sm="10">
-    <a href="/users">Users</a>
-  <br>
-    <a href="/todos">Todos</a>
+<img src="https://ratemyracistprofessor.com/wp-content/uploads/2017/08/University-of-Minnesota-Morris.png" alt="Morris Logo" class="center">
   </div>
 </div>
