Add toolbar with links to all elements

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,4 +1,8 @@
 <div class="container">
-  <h1>Angular Spark Lab</h1>
+  <mat-toolbar color="primary">Angular Spark Lab
+    <button mat-button routerLink="/">Home</button>
+    <button mat-button routerLink="/users">Users</button>
+    <button mat-button routerLink="/todos">Todos</button>
+  </mat-toolbar>
   <router-outlet></router-outlet>
 </div>
