--- a/client/src/app/todos/todo-list.component.html
+++ b/client/src/app/todos/todo-list.component.html
@@ -28,7 +28,7 @@
           id="todoBody"
           placeholder="Contained in Body"
           (input)="updateBody($event.target.value)">
-          <mat-hint align="start">Looking for something in a body?</mat-hint>
+          <mat-hint align="start">Looking for something in the body?</mat-hint>
 
         </mat-form-field>
 
