Add icons to buttons

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,8 +1,9 @@
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <div class="container">
   <mat-toolbar color="primary">Angular Spark Lab
-    <button mat-button routerLink="/">Home</button>
-    <button mat-button routerLink="/users">Users</button>
-    <button mat-button routerLink="/todos">Todos</button>
+    <button mat-button routerLink="/"><mat-icon>home</mat-icon> Home</button>
+    <button mat-button routerLink="/users"><mat-icon>people</mat-icon> Users</button>
+    <button mat-button routerLink="/todos"><mat-icon>assignment</mat-icon> Todos</button>
   </mat-toolbar>
   <router-outlet></router-outlet>
 </div>
