Edit html for home and app to let css work add fonts

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,9 +1,10 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Press+Start+2P|Ropa+Sans&display=swap" rel="stylesheet">
 <div class="container">
-  <mat-toolbar color="primary">Angular Spark Lab
-    <button mat-button routerLink="/"><mat-icon>home</mat-icon> Home</button>
-    <button mat-button routerLink="/users"><mat-icon>people</mat-icon> Users</button>
-    <button mat-button routerLink="/todos"><mat-icon>assignment</mat-icon> Todos</button>
+  <mat-toolbar class='title' color="primary">Angular Spark Lab
+    <button class='navbar' mat-button routerLink="/"><mat-icon>home</mat-icon> Home</button>
+    <button class='navbar' mat-button routerLink="/users"><mat-icon>people</mat-icon> Users</button>
+    <button class='navbar' mat-button routerLink="/todos"><mat-icon>assignment</mat-icon> Todos</button>
   </mat-toolbar>
   <router-outlet></router-outlet>
 </div>
