--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div layout-gt-sm="row">
   <div flex-gt-sm="80" flex-offset-gt-sm="10">
-    <span> Lab 3 by Robert Beane and Hoomz Damte </span>
+    <span id="creators"> Lab 3 by Robert Beane and Hoomz Damte </span>
 <img src="https://ratemyracistprofessor.com/wp-content/uploads/2017/08/University-of-Minnesota-Morris.png" alt="Morris Logo" class="center">
   </div>
 </div>
